# GPry

./: .gitignore  .readthedocs.yaml  FUTURE.md  LICENSE  README.md  README.rst  __init__.py  pyproject.toml  setup.py
doc/: Makefile  requirements.txt
doc/source/: acquisition_functions.rst  adv_example.rst  callback.rst  conf.py  convergence.rst  didactic.ipynb  gp_acquisition.rst  gpr.rst  how_does_gpry_work.rst  index.rst  initialisation.rst  initialization.rst  installation.rst  intro_example.rst  io.rst  kernels.rst  mc.rst  mc_samples.rst  module_acquisition_functions.rst  module_cobaya.rst  module_convergence.rst  module_gp_acquisition.rst  module_gpr.rst  module_infinities_classifier.rst  module_io.rst  module_kernel.rst  module_mc.rst  module_mpi.rst  module_ns_interfaces.rst  module_plots.rst  module_preprocessing.rst  module_progress.rst  module_proposal.rst  module_run.rst  module_surrogate.rst  module_tools.rst  module_truth.rst  modules.rst  mpi.rst  plots.rst  (+10 more)
doc/source/stubs/: acquisition_functions.Acquisition_Function.rst  acquisition_functions.Mu.rst  (+7 more)
examples/: advanced_example.py  gaussians.py  introductory_example.ipynb  introductory_example.py  mpi_issue.py  plot_convergence.py  readme_example.py  run_likelihood_kl.py  simple_example.py  simple_example_with_run.py  test_GP_convergence_gaussian.py  test_GP_convergence_gaussian_PLOT.py  test_GP_planck.py  test_GP_planck5.py  test_GP_planck6.py  test_GP_planck7.py  test_GP_planck_prior.py  test_acquisition_proposal.py  test_gaussian_convergence_criterion.py  test_planck_lite.py
gpry/: CobayaSampler.yaml  CobayaWrapper.yaml  __init__.py  acquisition_functions.py  cobaya.py  convergence.py  diag.py  generator.py  gp_acquisition.py  gpr.py  infinities_classifier.py  io.py  kernels.py  mc.py  mle.py  mpi.py  ns_interfaces.py  plots.py  preprocessing.py  prior.py  progress.py  proposal.py  run.py  surrogate.py  svm.py  tools.py  truth.py
tests/: grid.py  model_generator.py  test_cobaya.py  test_io.py  test_pipeline.py  test_ranked_pool.py
